test/test_suite/errors/error_throw.c3
module foo;

error Blurg
{
}

func void main()
{
    int! i = Blurg!;
    int! j = Blurg({})!;
}